fix(gap): gap was changed

--- a/src/components/layout/Grid/grid.module.css
+++ b/src/components/layout/Grid/grid.module.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(4, 1fr);
-    gap: 1rem;
+    gap: clamp(0.5rem, 0.5vw, 5rem);
 }
 
 
@@ -21,7 +21,7 @@
 
 
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 870px) {
     .grid {
         display: flex;
         flex-direction: column;
